* photo-cell complete * clean up * logs removed * component memory handling added

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,9 +44,20 @@
         "*.html"
       ],
       "extends": [
-        ["plugin:@angular-eslint/template/recommended", "plugin:prettier/recommended"]
+        "plugin:@angular-eslint/template/recommended",
+        "plugin:prettier/recommended"
       ],
       "rules": {}
+    },
+    {
+      "files": "node_modules/@w11k/rx-ninja/dist/tslint_rules",
+      "rules": {
+        "rx-ninja-subscribe-takeuntil": [
+          true,
+          "takeUntil",
+          "untilComponentDestroyed"
+        ]
+      }
     }
   ]
 }
