--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "@w11k/ngx-componentdestroyed": "^5.0.2",
     "bootstrap": "^4.5.0",
     "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~6.6.0",
