--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular-eslint/template-parser": "4.3.0",
     "@angular/cli": "~11.2.2",
     "@angular/compiler-cli": "~11.2.3",
+    "@ngneat/spectator": "^8.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
