--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod",
+    "start" : "node server.js"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.3",
+    "@angular/cli": "~11.2.2",
     "@angular/common": "~11.2.3",
     "@angular/compiler": "~11.2.3",
+    "@angular/compiler-cli": "~11.2.3",
     "@angular/core": "~11.2.3",
     "@angular/forms": "~11.2.3",
     "@angular/localize": "~11.2.3",
@@ -27,10 +30,13 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@w11k/ngx-componentdestroyed": "^5.0.2",
     "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-scrolltop": "^2.4.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.1.2",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
@@ -40,8 +46,6 @@
     "@angular-eslint/eslint-plugin-template": "4.3.0",
     "@angular-eslint/schematics": "4.3.0",
     "@angular-eslint/template-parser": "4.3.0",
-    "@angular/cli": "~11.2.2",
-    "@angular/compiler-cli": "~11.2.3",
     "@ngneat/spectator": "^8.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
@@ -60,5 +64,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.1.2"
-  }
+  },
+  "engines": { "node": "14.15.4", "npm": "6.14.10"}
 }
