--- a/angular.json
+++ b/angular.json
@@ -88,8 +88,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
+            "src/styles.scss",
+            "src/global-styles/styles.scss"
+          ],
             "scripts": []
           }
         },
