--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --prod",
-    "start" : "node server.js"
+    "start": "node server.js"
   },
   "private": true,
   "dependencies": {
@@ -67,5 +67,8 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.1.2"
   },
-  "engines": { "node": "14.15.4", "npm": "6.14.10"}
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.10"
+  }
 }
