--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.3",
+    "@angular/cdk": "^11.2.13",
     "@angular/cli": "~11.2.2",
     "@angular/common": "~11.2.3",
     "@angular/compiler": "~11.2.3",
